--- a/src/components/HowItWorks.css
+++ b/src/components/HowItWorks.css
@@ -371,10 +371,3 @@
     height: 36px;
   }
 }
-.how {
-  overflow-x: hidden;
-}
-
-.hero__bg--discover {
-  overflow: hidden;
-}
